--- a/ConsoleApplication1/ConsoleApplication1.csproj
+++ b/ConsoleApplication1/ConsoleApplication1.csproj
@@ -45,7 +45,7 @@
   <ItemGroup>
     <Compile Include="Bishop.cs" />
     <Compile Include="Class1.cs" />
-    <Compile Include="Class3.cs" />
+    <Compile Include="Resurrection.cs" />
     <Compile Include="ConsoleBoard.cs" />
     <Compile Include="Figure.cs" />
     <Compile Include="Class2.cs" />
@@ -62,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="ClassDiagram2.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
